// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Button Primary smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Button",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "components-button--primary",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`Components/Button Secondary smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Button",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "components-button--secondary",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;
